src/snapshots/duvet__tests__markdown_report.snap
---
source: src/tests.rs
expression: "out[\"specifications\"][&spec]"
---
{
  "format": "markdown",
  "requirements": [],
  "sections": [
    {
      "id": "my-spec",
      "lines": [
        "here is a spec",
        ""
      ],
      "title": "My spec"
    },
    {
      "id": "testing",
      "lines": [
        [
          [
            [
              0
            ],
            16,
            "This quote MUST work"
          ]
        ],
        [
          [
            [
              0
            ],
            16,
            "* with"
          ]
        ],
        [
          [
            [
              0
            ],
            16,
            "* bullets"
          ]
        ],
        "        "
      ],
      "title": "Testing"
    }
  ],
  "title": "My spec"
}
